--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,25 @@
-quart==0.19.3
+aiofiles==23.2.1
+blinker==1.7.0
+certifi==2023.7.22
+charset-normalizer==3.3.2
+click==8.1.7
 discoauth==2.0.0
+exceptiongroup==1.1.3
+Flask==3.0.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+Hypercorn==0.15.0
+hyperframe==6.0.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+priority==2.0.0
+Quart==0.19.3
+requests==2.31.0
+taskgroup==0.0.0a4
+tomli==2.0.1
+urllib3==2.1.0
+Werkzeug==3.0.1
+wsproto==1.2.0
